# orga_2

./: .env.example  .gitignore  Caddyfile.staging  README.md  docker-compose.dev.yml  docker-compose.staging.yml  mypy.ini  playwright.config.ts  pyproject.toml
.github/workflows/: ci.yml
PS1/: backup.ps1  deploy_staging.ps1  dev_up.ps1  init_repo.ps1  logs.ps1  seed.ps1  smoke.ps1  test_all.ps1
backend/: README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: conflicts.py  db.py  main.py  models.py  schemas.py  seed.py  settings.py
backend/app/routers/: auth.py  availability.py  missions.py  technicians.py
docs/: roadmap.md
frontend/: .eslintrc.cjs  README.md  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/ui/: Button.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Calendar.tsx  MissionDetail.tsx  Missions.tsx  Technicians.tsx
frontend/tests/: example.spec.tsx
tests/backend/: conftest.py  test_conflicts.py  test_crud_availability.py  test_crud_missions.py  test_crud_technicians.py
tools/: smoke_ci.sh
