[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccw-backend"
version = "0.1.0"
description = "Backend FastAPI pour Coulisses Crew (monorepo)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
"fastapi>=0.111,<1.0",
"uvicorn[standard]>=0.29,<1.0",
"pydantic>=2.7,<3.0",
"pydantic-settings>=2.0,<3.0",
"sqlalchemy>=2.0,<3.0",
"alembic>=1.13,<2.0",
"psycopg2-binary>=2.9,<3.0",
"redis>=5.0,<6.0",
"httpx>=0.27,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools.packages.find]
include = ["app"]
